<resources>
    <string name="app_name">OtwarteWNiedziele</string>
    <string name="Welcome">Witamy</string>
    <string name="PortalSprzewawcy">Portal Sprzewawcy</string>
    <string name="Zamknij">Zamknij Aplikację</string>
    <string name="SklepyWOkolicy">Wyświetl sklepy otwarte w okolicy.</string>
    <string name="SklepyPoAdresie">Wyświetl sklepy po podanym adresie.</string>
    <string name="Back">Powrót</string>
    <string name="Enter">Zatwierdź</string>
    <string name="title_activity_maps">Map</string>
    <string name="shop">SKLEP</string>
    <string name="add">został dodany do bazy danych.</string>
    <string name="shopName">Nazwa sklepu</string>
    <string name="dataShop">Dane dotyczące sklepu</string>
    <string name="update">zostały zakualizowane.</string>
    <string name="login">Zaloguj</string>
    <string name="loginhint">login</string>
    <string name="password">hasło</string>
    <string name="or">lub</string>
    <string name="newUser">Rejestracja nowego użytkownika.</string>
    <string name="nameHint">Imię</string>
    <string name="surnameHInt">Nazwisko</string>
    <string name="confirmPassword">powtórz hasło</string>
    <string name="emailExample">jan.kowalski@gmail.com</string>
    <string name="loggedAs">Zalogowany jako:</string>
    <string name="mainPage">Strona startowa</string>
    <string name="addShop">Dodaj sklep</string>
    <string name="yourShops">Twoje sklepy</string>
    <string name="Name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="email">Email</string>
    <string name="AddShopInfo">Podaj dane dotyczące sklepu:</string>
    <string name="alkohol">Czy posiadasz w sprzedarzy alkohol:</string>
    <string name="Yes">Tak</string>
    <string name="No">Nie</string>
    <string name="Postcode">Kod pocztowy</string>
    <string name="City">MIasto</string>
    <string name="Street">Ulica</string>
    <string name="BuldingNo">Nr budynku</string>
    <string name="LocalNo">Nr lokalu</string>
    <string name="OpenHouer">Godzina otwarcia</string>
    <string name="CloseHouer">Godzina zamknięcia</string>
    <string name="EditShop">Modyfikuj sklep</string>
    <string name="DeleteShop">Usuń sklep</string>
    <string name="ListOfYourShops">Lista twoich sklepów:</string>
    <string name="DelShopInfo">został usunięty z bazy danych.</string>
    <string name="EditShopInfo">Dane dotyczące sklepu:</string>
</resources>
