<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.InputShopDataActivity">

    <EditText
        android:id="@+id/CloseHouer"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="355dp"
        android:ems="10"
        android:hint="@string/CloseHouer"
        android:inputType="time"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Postcode7"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/Postcode"
        android:inputType="number"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ShopName7"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/shopName"
        android:inputType="text"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/BuldingNo"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:hint="@string/BuldingNo"
        android:inputType="textPassword|number"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/enter7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <EditText
        android:id="@+id/city7"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="155dp"
        android:ems="10"
        android:hint="@string/City"
        android:inputType="text"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Street7"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="195dp"
        android:ems="10"
        android:hint="@string/Street"
        android:inputType="text"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LocalNo"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:hint="@string/LocalNo"
        android:inputType="number"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/OpenHouer"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="315dp"
        android:ems="10"
        android:hint="@string/OpenHouer"
        android:inputType="time"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AddShopInfo"
        android:layout_width="211dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:text="@string/AddShopInfo"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AkoholInfo7"
        android:layout_width="242dp"
        android:layout_height="22dp"
        android:layout_marginTop="404dp"
        android:text="@string/alkohol"
        android:textAlignment="textStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="436dp"
        android:text="@string/Yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="468dp"
        android:text="@string/No"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>